--- a/plugins/jira/plugin.spec.yaml
+++ b/plugins/jira/plugin.spec.yaml
@@ -7,7 +7,7 @@ vendor: rapid7
 support: rapid7
 status: []
 description: Automate the creation, search and management of issues, users, and alerting for Jira Software, Jira Server, and Jira ServiceDesk
-version: 6.3.0
+version: 6.4.0
 supported_versions: ["Jira Server 6.0", "Jira (Cloud)", "Jira ServiceDesk (Cloud)"]
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/jira
@@ -589,6 +589,13 @@ triggers:
         type: integer
         default: 60
         example: 60
+      include_fields:
+        title: Include Fields
+        description: Whether returned Issues should include fields
+        required: false
+        type: boolean
+        default: False
+        example: True
     output:
       issue:
         title: Issue
@@ -626,6 +633,13 @@ triggers:
         type: integer
         default: 60
         example: 60
+      include_fields:
+        title: Include Fields
+        description: Whether returned Issues should include fields
+        required: false
+        type: boolean
+        default: False
+        example: True
     output:
       issue:
         title: Issue
