--- a/plugins/servicenow/plugin.spec.yaml
+++ b/plugins/servicenow/plugin.spec.yaml
@@ -165,7 +165,7 @@ actions:
         example: In Progress
       impact:
         title: Impact
-        description: Impact of the indicent
+        description: Impact of the incident
         type: string
         required: false
         example: Medium
