[PLGN-134] ServiceNow Update Incident defaults (#1600)
* Updated update_incident action so that previous fields remain intact

* Updated update_incident action so that previous fields remain intact

* Updated incident typo

* Corrected spacing

* Corrected spacing

* Corrected spacing

* Corrected spacing

* Typo correction of incident

* Regenerate for checksum

* Regenerate for checksum

* Regenerate for checksum

Co-authored-by: Dympna Laverty <dympna_laverty@rapid7.com>

--- a/plugins/servicenow/plugin.spec.yaml
+++ b/plugins/servicenow/plugin.spec.yaml
@@ -165,7 +165,7 @@ actions:
         example: In Progress
       impact:
         title: Impact
-        description: Impact of the indicent
+        description: Impact of the incident
         type: string
         required: false
         example: Medium
@@ -321,7 +321,7 @@ actions:
         example: On Hold
       impact:
         title: Impact
-        description: Impact of the indicent
+        description: Impact of the incident
         type: string
         required: false
         example: Medium
