refactored action file, updated example input in help and spec files

--- a/plugins/rapid7_insightvm/plugin.spec.yaml
+++ b/plugins/rapid7_insightvm/plugin.spec.yaml
@@ -4217,26 +4217,26 @@ actions:
         type: account
         required: true
         example: {
-          "authenticationType": "",
-          "communityName": "",
+          "authentication_type": "",
+          "community_name": "",
           "database": "",
           "domain": "rapid7.com",
-          "enumerateSids": false,
-          "notesIDPassword": "",
-          "ntlmHash": "",
-          "oracleListenerPassword": "",
+          "enumerate_sids": false,
+          "notes_id_password": "",
+          "ntlm_hash": "",
+          "oracle_listener_password": "",
           "password": "password",
-          "pemKey": "",
-          "permissionElevation": "",
-          "permissionElevationPassword": "",
-          "permissionElevationUserName": "",
-          "privacyPassword": "",
-          "privacyType": "",
-          "privateKeyPassword": "",
+          "pem_key": "",
+          "permission-elevation": "",
+          "permission-elevation_password": "",
+          "permission-elevation_username": "",
+          "privacy_password": "",
+          "privacy_type": "",
+          "private_key_password": "",
           "realm": "",
-          "service": "",
+          "service": "telnet",
           "sid": "",
-          "useWindowsAuthentication": false,
+          "use_windows_authentication": false,
           "username": "username"
         }
       description:
