Updated to latest SDK to avoid SSL cert error. Added examples for all actions

--- a/plugins/samanage/Dockerfile
+++ b/plugins/samanage/Dockerfile
@@ -1,10 +1,9 @@
-FROM komand/python-3-plugin:2
-# The three supported python parent images are:
-# - komand/python-2-plugin
-# - komand/python-3-plugin
-# - komand/python-pypy3-plugin
-#
-LABEL organization=komand
+FROM rapid7/insightconnect-python-3-38-plugin:4
+
+LABEL organization=rapid7
+LABEL sdk=python
+LABEL type=plugin
+
 
 # Add any custom package dependencies here
 # NOTE: Add pip packages to requirements.txt
