--- a/plugins/rapid7_insightidr/plugin.spec.yaml
+++ b/plugins/rapid7_insightidr/plugin.spec.yaml
@@ -4,7 +4,7 @@ products: [insightconnect]
 name: rapid7_insightidr
 title: "Rapid7 InsightIDR"
 description: "This plugin allows you to add indicators to a threat and see the status of investigations"
-version: 4.2.1
+version: 4.3.0
 supported_versions: ["Latest release successfully tested on 2022-07-20."]
 vendor: rapid7
 cloud_ready: true
@@ -1105,6 +1105,12 @@ actions:
         type: string
         example: 174e4f99-2ac7-4481-9301-4d24c34baf06
         required: true
+      most_recent_first:
+        title: Most Recent First
+        description: Order most recent first
+        type: boolean
+        example: true
+        required: false
     output:
       events:
         title: Events
